chore: add src to crawl data from sephoria.com

--- a/notebooks/crawl_data.ipynb
+++ b/notebooks/crawl_data.ipynb
@@ -87,228 +87,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "68aea89e-4d51-45e5-b93c-d7efc9009b1f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_urls = set()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "8cb890d0-75ec-4aa4-bf50-0b7307c90fd9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def scroll_down(last_height):\n",
-    "    #giving some time to load\n",
-    "    time.sleep(10)\n",
-    "\n",
-    "    #getting the height of the webpage for infinite croll web page\n",
-    "    # last_height = driver.execute_script(\"return document.body.scrollHeight\")\n",
-    "\n",
-    "    # Scroll down until no more content is loaded\n",
+    "def get_url(height):\n",
+    "    all_urls = set()\n",
+    "    \n",
+    "    # giving some time to load\n",
+    "    page = 1\n",
     "    while True:\n",
-    "        #scrolling once code\n",
-    "        driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
-    "\n",
-    "        #giving time to load\n",
+    "        # Scroll down until no more content is loaded\n",
+    "        # scrolling once code        \n",
+    "        driver.execute_script(f\"window.scrollTo(0, {height});\")\n",
+    "        # giving time to load\n",
     "        time.sleep(10) # wait for content to load\n",
     "\n",
-    "        #checking new height of webpage\n",
-    "        new_height = driver.execute_script(\"return document.body.scrollHeight\")\n",
+    "        elm_products = driver.find_elements(By.CSS_SELECTOR, \"body > div:nth-child(3) > div > div > div > div.css-1t2x5d0.eanm77i0 > main > div:nth-child(3) > div.css-1322gsb > * > a\")\n",
+    "        for product in elm_products:\n",
+    "            url = product.get_attribute(\"href\")\n",
+    "            all_urls.add(url)\n",
+    "        \n",
+    "        height += 300\n",
+    "        if len(all_urls) == 60*page:\n",
+    "            print(f\"Loaded all urls from the page {page}\")\n",
+    "            time.sleep(5)\n",
+    "            more_button = WebDriverWait(driver, 50).until(EC.element_to_be_clickable((By.LINK_TEXT, \"Show More Products\")))\n",
+    "            action = ActionChains(driver)    \n",
+    "            action.click(more_button).key_down(Keys.CONTROL).key_up(Keys.CONTROL).perform() \n",
+    "            more_button.click()            \n",
+    "            page += 1            \n",
     "\n",
-    "        #defining the break condition to stop the execution at the end of the webpage\n",
-    "        if new_height == last_height:\n",
+    "        if page == 46:\n",
     "            break\n",
-    "        last_height = new_height         #while loop breaks when the last height of web page will not change "
+    "        \n",
+    "    return all_urls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "418f0969-f0e6-45fb-bdb5-3d3d55a15daa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_urls = get_url(400)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "cc357a46-5ece-4c2e-964b-bf834f9ecb80",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scroll_down(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ec42d4a-0f24-445a-9304-9e91fd9ba034",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from bs4 import BeautifulSoup\n",
-    "import urllib.request\n",
-    "\n",
-    "parser = 'html.parser'  # or 'lxml' (preferred) or 'html5lib', if installed\n",
-    "resp = urllib.request.urlopen(\"https://www.sephora.com/shop/makeup-cosmetics\")\n",
-    "soup = BeautifulSoup(resp, parser, from_encoding=resp.info().get_param('charset'))\n",
-    "\n",
-    "for link in soup.find_all('a', href=True):\n",
-    "    print(link['href'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "84fd82eb-f119-4a46-ab81-8d08a4d1e370",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import urllib.request\n",
-    "\n",
-    "user_agent = 'Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.0.7) Gecko/2009021910 Firefox/3.0.7'\n",
-    "\n",
-    "url = \"https://www.sephora.com/shop/makeup-cosmetics\"\n",
-    "headers={'User-Agent':user_agent,} \n",
-    "\n",
-    "request=urllib.request.Request(url,None,headers) #The assembled request\n",
-    "response = urllib.request.urlopen(request)\n",
-    "data = response.read() # The data u need"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b5f55948-fca2-4038-8e65-41395ab0bd7d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# while True:                    \n",
-    "# more_button = WebDriverWait(driver, 50).until(EC.element_to_be_clickable((By.CSS_SELECTOR, \"body > div:nth-child(3) > div > div > div > div.css-1t2x5d0.eanm77i0 > main > div:nth-child(3) > div.css-1322gsb > div.css-unii66 > button\")))\n",
-    "# more_button.click()\n",
-    "\n",
-    "\n",
-    "elm_products = driver.find_elements(By.CSS_SELECTOR, \"body > div:nth-child(3) > div > div > div > div.css-1t2x5d0.eanm77i0 > main > div:nth-child(3) > div.css-1322gsb > * > a\")\n",
-    "# soup = BeautifulSoup(elm_products, 'html.parser')\n",
-    "# all_products = soup.find(\"body\").find_all(\"a\", {'class': 'css-klx76'})\n",
-    "for product in elm_products:\n",
-    "    # html_product = product.get_attribute('outerHTML')\n",
-    "    # soup = BeautifulSoup(html_product, 'html.parser')\n",
-    "    # url = soup.find(\"a\")['href'].split(\" \")[0]\n",
-    "    url = product.get_attribute(\"href\")\n",
-    "    print(url)\n",
-    "        \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "16094e3d-e890-4fc7-98e6-7149504bdf46",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<selenium.webdriver.remote.webelement.WebElement (session=\"43027ae70a90cde29ec070921e56e9bf\", element=\"3381C093F59B1247AD86F7AF367D9E0D_element_197\")>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "product"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1036,
-   "id": "b7d6cac8-53f2-4665-8ba4-cd429c0515d6",
+   "id": "1c6e3fc1-7102-499c-9dfa-7b63d5c1a30a",
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1037,
-   "id": "a67e1b15-934d-40d2-a834-6a6d66010d5d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "74"
-      ]
-     },
-     "execution_count": 1037,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(elm_products)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 987,
-   "id": "0d68474e-8411-43e6-9f2d-cebb66c4d0d8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for elm_product in elm_products:\n",
-    "#     html_product = elm_product.get_attribute('outerHTML')\n",
-    "#     soup_product = BeautifulSoup(html_product, 'html.parser')\n",
-    "#     print(soup_product)\n",
-    "#     break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 988,
-   "id": "599063ae-62fe-4cf5-994f-248a4bca7164",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 989,
-   "id": "18b77e9d-9ac1-45a0-85ed-7661c19f8fef",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 970,
-   "id": "496253b3-fec3-4b43-bcb2-4dc6fd769127",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_links = []\n",
-    "for product in all_products:\n",
-    "    all_links.append(product['href'].split(\" \")[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 991,
-   "id": "17e9942a-2c46-4f0a-b06f-6cdf0907b891",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1078"
-      ]
-     },
-     "execution_count": 991,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(all_products)"
-   ]
   },
   {
    "cell_type": "code",
