chore: add src to crawl data from sephoria.com

--- a/notebooks/crawl_data.ipynb
+++ b/notebooks/crawl_data.ipynb
@@ -13,6 +13,7 @@
     "from selenium.webdriver.support import expected_conditions as EC\n",
     "from selenium.webdriver.common.action_chains import ActionChains\n",
     "from selenium.webdriver.common.keys import Keys\n",
+    "from selenium.webdriver.chrome.options import Options\n",
     "from time import sleep\n",
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
@@ -23,19 +24,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 90,
    "id": "d118959c-7223-4261-8cbb-64a7f11305d5",
    "metadata": {},
    "outputs": [],
    "source": [
     "DRIVER_PATH = 'chromedriver'\n",
-    "# option.add_argument('headless')\n",
-    "driver = webdriver.Chrome(executable_path=DRIVER_PATH)"
+    "options = Options()\n",
+    "options.add_argument('--headless')\n",
+    "driver = webdriver.Chrome(executable_path=DRIVER_PATH, chrome_options=options)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 91,
    "id": "142d390f-cbd5-4a68-914f-4bdd3abea237",
    "metadata": {},
    "outputs": [],
@@ -46,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 92,
    "id": "05115d32-94b3-469c-b533-424c640ad3cb",
    "metadata": {},
    "outputs": [],
@@ -56,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 93,
    "id": "f36a3ff5-d288-4198-8a03-d7f77146eb19",
    "metadata": {},
    "outputs": [],
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 94,
    "id": "f2359788-2e2a-42c7-bb4e-b79c8f1c19f4",
    "metadata": {},
    "outputs": [],
@@ -77,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 95,
    "id": "39bfb552-3153-455d-9e9c-2c106533107e",
    "metadata": {},
    "outputs": [],
@@ -87,7 +89,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 96,
+   "id": "58ff1e29-6adb-4f7b-8deb-fbaa219f3fd1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.sephora.com/shop/makeup-cosmetics'"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "current_url = driver.current_url\n",
+    "current_url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
    "id": "8cb890d0-75ec-4aa4-bf50-0b7307c90fd9",
    "metadata": {},
    "outputs": [],
@@ -98,6 +122,9 @@
     "    # giving some time to load\n",
     "    page = 1\n",
     "    while True:\n",
+    "        product_url = f\"{current_url}?currentPage={page}\"\n",
+    "        driver.get(product_url)\n",
+    "        time.sleep(10)\n",
     "        # Scroll down until no more content is loaded\n",
     "        # scrolling once code        \n",
     "        driver.execute_script(f\"window.scrollTo(0, {height});\")\n",
@@ -109,15 +136,12 @@
     "            url = product.get_attribute(\"href\")\n",
     "            all_urls.add(url)\n",
     "        \n",
-    "        height += 300\n",
+    "        height += 200\n",
+    "        print(len(all_urls))\n",
     "        if len(all_urls) == 60*page:\n",
-    "            print(f\"Loaded all urls from the page {page}\")\n",
-    "            time.sleep(5)\n",
-    "            more_button = WebDriverWait(driver, 50).until(EC.element_to_be_clickable((By.LINK_TEXT, \"Show More Products\")))\n",
-    "            action = ActionChains(driver)    \n",
-    "            action.click(more_button).key_down(Keys.CONTROL).key_up(Keys.CONTROL).perform() \n",
-    "            more_button.click()            \n",
-    "            page += 1            \n",
+    "            print(f\"Loaded all urls from the page {page}\")      \n",
+    "            page += 1       \n",
+    "            height = 300\n",
     "\n",
     "        if page == 46:\n",
     "            break\n",
@@ -130,9 +154,106 @@
    "execution_count": null,
    "id": "418f0969-f0e6-45fb-bdb5-3d3d55a15daa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "6\n",
+      "9\n",
+      "9\n",
+      "13\n",
+      "13\n",
+      "16\n",
+      "16\n",
+      "20\n",
+      "20\n",
+      "24\n",
+      "24\n",
+      "28\n",
+      "32\n",
+      "32\n",
+      "36\n",
+      "36\n",
+      "40\n",
+      "40\n",
+      "44\n",
+      "44\n",
+      "48\n",
+      "52\n",
+      "52\n",
+      "56\n",
+      "56\n",
+      "60\n",
+      "Loaded all urls from the page 1\n",
+      "66\n",
+      "66\n",
+      "69\n",
+      "69\n",
+      "73\n",
+      "73\n",
+      "76\n",
+      "76\n",
+      "80\n",
+      "80\n",
+      "84\n",
+      "88\n",
+      "88\n",
+      "92\n",
+      "92\n",
+      "96\n",
+      "100\n",
+      "100\n",
+      "104\n",
+      "104\n",
+      "108\n",
+      "108\n",
+      "112\n",
+      "116\n",
+      "116\n",
+      "120\n",
+      "Loaded all urls from the page 2\n",
+      "126\n",
+      "126\n",
+      "129\n",
+      "129\n",
+      "133\n",
+      "133\n",
+      "136\n",
+      "136\n",
+      "140\n",
+      "144\n",
+      "144\n",
+      "148\n",
+      "148\n",
+      "152\n",
+      "152\n",
+      "156\n",
+      "160\n",
+      "160\n",
+      "164\n",
+      "164\n",
+      "168\n",
+      "168\n",
+      "172\n",
+      "172\n",
+      "176\n",
+      "179\n",
+      "179\n",
+      "179\n",
+      "179\n",
+      "179\n",
+      "179\n",
+      "179\n",
+      "179\n",
+      "179\n",
+      "179\n"
+     ]
+    }
+   ],
    "source": [
-    "all_urls = get_url(400)"
+    "all_urls = get_url(300)"
    ]
   },
   {
